fix 'change Network panel's z-index so photos do not appear on top'

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1978,7 +1978,10 @@ body.loading .layer{
 			opacity: 1 !important;
 			pointer-events: all !important;
 		}
-
+	.about-fake-tabs{
+		z-index: 99;
+		position: relative;
+	}
 	.about-fake-tabs .theme{
 		height: 2.4rem;
 	}
